[gd_scene load_steps=8 format=3 uid="uid://dgpphl73xfcnn"]

[ext_resource type="Script" path="res://escenas/player/player.gd" id="1_gs3vy"]
[ext_resource type="Texture2D" uid="uid://wdi2a6u11u4a" path="res://assets/personajes/shipPink_manned.png" id="1_qaiqy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_46hc0"]
size = Vector2(124, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_luagk"]
size = Vector2(124, 120)

[sub_resource type="Animation" id="Animation_dmgid"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_e5s0n"]
resource_name = "invencibilidad"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.258824), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ow1o"]
_data = {
"RESET": SubResource("Animation_dmgid"),
"invencibilidad": SubResource("Animation_e5s0n")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_gs3vy")

[node name="PhysicCollision2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_46hc0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_qaiqy")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_luagk")

[node name="TimerInvencibilidad" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4ow1o")
}

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="TimerInvencibilidad" to="." method="_on_timer_invencibilidad_timeout"]
